[update] Refactor CheckUpPage and related components to enhance PDF generation and error handling. Remove unused PDF dependencies and streamline Jasper report loading. Update project configuration for JDK version and adjust run configurations for improved compatibility.